dark mode fixed only on home elsewhere is bad than before

--- a/polynomialvisualizerstyle.css
+++ b/polynomialvisualizerstyle.css
@@ -10,10 +10,16 @@
 {
     width: 100%;
     display: flex;
-    gap: 2em;
+    gap: 4em;
     padding: 1em 1em 1em 3em;
+    flex-direction: row;
     background-color: rgb(26, 26, 252);
     color: white;
+    flex: 1;
+}
+
+.nav1{
+    justify-content: right;
 }
 
  a{
